--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -70,6 +70,10 @@
     .newsletter form button {
         width: 30%;
     }
+
+    .pitch .pitch__video iframe {
+        height: 100%;
+    }
 }
 
 @media screen and (max-width: 600px) {
