--- a/src/components/ChatBot/styles.css
+++ b/src/components/ChatBot/styles.css
@@ -27,7 +27,8 @@
     height: 250px;
     background-color: #ffffff;
     border-top: 30px solid #FF8E00;
-    border-radius: 12px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 30px 0px;
 }
 
 .chat__card__form span {
