Add video page; Fix mobile navigation

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -44,7 +44,7 @@
         display: none;
     }
 
-    header .nav .nav__menu__mobile {
+    header .nav .nav__menu__mobile__btn {
         display: block;
     }
 
