--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -35,5 +35,38 @@ header .nav__menu__desktop ul li a {
 }
 
 header .nav__menu__mobile {
+    width: 100%;
+    background-color: #003466;
+    top: 6.5rem;
+    position: absolute;
+    left: 0;
+}
+
+header .nav__menu__mobile__btn {
     display: none;
+}
+
+header .nav__menu__mobile__items {
+    width: 100%;
+}
+
+header .nav__menu__mobile__items ul {
+    display: none;
+    position: relative;
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    padding: 1rem;
+}
+
+header .nav__menu__mobile__items ul li {
+    margin: 15px 10px;
+    display: inline-block;
+}
+
+header .nav__menu__mobile__items ul li a {
+    text-decoration: none;
+    color: #ffffff;
+    font-family: "DubaiMedium";
+    text-transform: uppercase;
 }
