--- a/src/components/ChatBot/styles.css
+++ b/src/components/ChatBot/styles.css
@@ -26,7 +26,7 @@
     max-width: 40%;
     height: 250px;
     background-color: #ffffff;
-    border-top: 30px solid #FF8E00;
+    border-top: 20px solid #FF8E00;
     border-radius: 10px;
     box-shadow: 0px 0px 30px 0px;
 }
@@ -36,6 +36,12 @@
     text-align: justify;
     font-size: 0.8rem;
     font-family: "Courier Prime";
+}
+
+.chat__card__form a {
+    text-decoration: none;
+    color: #2d2d2d;
+    font-weight: bold;
 }
 
 .chat__card__socials {
