--- a/src/components/Newsletter/styles.css
+++ b/src/components/Newsletter/styles.css
@@ -42,6 +42,12 @@
 
 .newsletter p {
     font-family: "DubaiLight";
-    color: #FF5003;
+    color: #2d2d2d;
+    font-size: 1rem;
+}
+
+.newsletter p#temporary {
+    font-family: "DubaiLight";
+    color: #FF8E00;
     font-size: 1rem;
 }
